; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/apphelp/extr_env.c_call_ApphelpCheckRunApp.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/apphelp/extr_env.c_call_ApphelpCheckRunApp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32, i32*, i32, i32*, i32, i32)* @call_ApphelpCheckRunApp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @call_ApphelpCheckRunApp(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32* %5, i32 %6, i32* %7, i32 %8, i32 %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  store i32 %0, i32* %12, align 4
  store i32 %1, i32* %13, align 4
  store i32 %2, i32* %14, align 4
  store i32 %3, i32* %15, align 4
  store i32 %4, i32* %16, align 4
  store i32* %5, i32** %17, align 8
  store i32 %6, i32* %18, align 4
  store i32* %7, i32** %19, align 8
  store i32 %8, i32* %20, align 4
  store i32 %9, i32* %21, align 4
  store i32 0, i32* %22, align 4
  store i32 0, i32* %23, align 4
  br i1 true, label %24, label %36

24:                                               ; preds = %10
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* %14, align 4
  %28 = load i32, i32* %15, align 4
  %29 = load i32, i32* %16, align 4
  %30 = load i32*, i32** %17, align 8
  %31 = load i32, i32* %18, align 4
  %32 = load i32*, i32** %19, align 8
  %33 = load i32, i32* %20, align 4
  %34 = load i32, i32* %21, align 4
  %35 = call i32 @pApphelpCheckRunAppEx_w7(i32 %25, i32* null, i32* null, i32 %26, i32 %27, i32 %28, i32 %29, i32* %30, i32 %31, i32* %32, i32 %33, i32 %34, i32* %22, i32* %23)
  store i32 %35, i32* %11, align 4
  br label %51

36:                                               ; preds = %10
  br i1 true, label %37, label %49

37:                                               ; preds = %36
  %38 = load i32, i32* %12, align 4
  %39 = load i32, i32* %13, align 4
  %40 = load i32, i32* %14, align 4
  %41 = load i32, i32* %15, align 4
  %42 = load i32, i32* %16, align 4
  %43 = load i32*, i32** %17, align 8
  %44 = load i32, i32* %18, align 4
  %45 = load i32*, i32** %19, align 8
  %46 = load i32, i32* %20, align 4
  %47 = load i32, i32* %21, align 4
  %48 = call i32 @pApphelpCheckRunAppEx_w10(i32 %38, i32* null, i32* null, i32 %39, i32 %40, i32* null, i32 %41, i32 %42, i32* %43, i32 %44, i32* %45, i32 %46, i32 %47, i32* %22, i32* %23)
  store i32 %48, i32* %11, align 4
  br label %51

49:                                               ; preds = %36
  %50 = load i32, i32* @FALSE, align 4
  store i32 %50, i32* %11, align 4
  br label %51

51:                                               ; preds = %49, %37, %24
  %52 = load i32, i32* %11, align 4
  ret i32 %52
}

declare dso_local i32 @pApphelpCheckRunAppEx_w7(i32, i32*, i32*, i32, i32, i32, i32, i32*, i32, i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @pApphelpCheckRunAppEx_w10(i32, i32*, i32*, i32, i32, i32*, i32, i32, i32*, i32, i32*, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
